Jump Start Changelog
====================

2.0.0-RC2 - XX/XX/2015
----------------------

* Improvements to Jumbotron, named changed Hero Unit in Layout Builder.
* Improvement to main menu dropdowns on desktop; submenus will now flyout opposite direction if too close to browser edge.
* Improvements to mobile menu usability. 
* Added "Text Blocks" sortable option type.
* Added buttons sizes `xxl` and `xxxl`.
* Allow mobile menu to be filtered appear from left.
* Fixed: Only load Nivo script if Theme Blvd Sliders plugin is installed.
* Fixed: Animation of hiding mobile menu with RTL languages.

**Important:** If updating from a prior 2.0-beta/RC version, you must reconfigure options of any "Hero Unit" (previously named Jumbotron) user in Builder.

--------------------------------------------------------------

2.0.0-RC1 - 05/01/2015
----------------------

* Added ThemeForest update system.
* Added "Save Options" button to individual sections of Theme Options page.
* Added "Naked Page" page template, which outputs a standard page without content background.
* Added option to style bbPress pages like new naked page template, see *Appearance > Theme Options > Plugins > bbPress*.
* Added theme debug info to output in `<head>` of site, [see here](http://dev.themeblvd.com/tutorial/remove-debug-info).
* Moved viewport meta tag closer to top of `<head>`.
* Improved responsive display of Tabs element and `[tabs]` shortcode.
* Improved thumbnail link hover icons.
* Improved extendability of HTML5 output of background videos.
* Improvements to bbPress styling and compatibility.
* Allow "Display Width" of image element to override 100% responsive CSS fix for when within equal height columns.
* Fixed: Header text option not outputting correctly with more than two icons.
* Fixed: Product columns selections in WooCommerce theme options.
* Fixed: Chat post format is supported, but wasn't registered.
* Fixed: Image center alignment issues.