@@ -65,7 +65,7 @@
 	margin-right: auto;
 	max-width: 1170px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1199px) {
 	.header-top > .wrap,
 	.header-above > .wrap,
 	.header-content > .wrap,
@@ -78,7 +78,7 @@
 		max-width: 960px;
 	}
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.header-top > .wrap,
 	.header-above > .wrap,
 	.header-content > .wrap,
@@ -155,7 +155,7 @@
 	padding: 20px 10px;
 	position: relative;
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.header-content > .wrap {
 		padding-top: 10px;
 		padding-bottom: 10px;
@@ -164,7 +164,7 @@
 .header-logo {
 	float: right;
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.header-logo {
 		float: none;
 		padding-left: 58px;
@@ -214,7 +214,7 @@
 .header-nav {
 	background: #333333;
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.header-nav {
 		display: none;
 	}
@@ -244,7 +244,7 @@
 .tb-primary-menu > li.menu-item-has-children > .menu-btn {
 	padding-right: 10px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1199px) {
 	.tb-primary-menu > li > .menu-btn {
 		padding: 18px 15px;
 	}
@@ -363,14 +363,14 @@
 #main {
 	padding: 20px 0;
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	#content {
 		margin-bottom: 30px;
 	}
 }
 
 /* Breadcrumbs */
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.breadcrumb {
 		font-size: 12px;
 		margin-bottom: 0;
@@ -401,7 +401,7 @@
 .footer-content .entry-content > p:last-child {
 	margin-bottom: 0;
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.footer-content .col {
 		margin-bottom: 30px;
 	}
