@@ -31,14 +31,14 @@ Author URI: http://www.themeblvd.com
 	padding: 6px 0 0 0;
 	text-align: right;
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.header-addon {
 		display: none;
 	}
 }
 
 /* Header Logo */
-@media (min-width: 993px) {
+@media (min-width: 992px) {
 	.js-center-logo .header-content .header-logo {
 		float: none;
 		text-align: center;
@@ -218,12 +218,12 @@ Author URI: http://www.themeblvd.com
 .js-boxed.content_dark #container {
 	background: #222222;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1199px) {
 	.js-boxed #container {
 		max-width: 990px;
 	}
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	.js-boxed #container {
 		max-width: 738px;
 	}
@@ -238,7 +238,7 @@ Author URI: http://www.themeblvd.com
 	max-width: 1170px;
 	left: 50%;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1199px) {
 	.js-boxed .tb-sticky-menu {
 		margin-left: -480px;
 		max-width: 960px;
